# slasha

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  full_diff.txt  install.sh  readme.md  setup.sh  when app gets deleted.txt
crates/cli/: Cargo.toml
crates/cli/src/: apps.rs  auth.rs  clap_app.rs  config.rs  http.rs  main.rs  utils.rs
crates/server/: Cargo.toml  diesel.toml
crates/server/src/: assets.rs  auth.rs  error.rs  lib.rs  main.rs  ssh.rs
crates/server/src/docker/: broadcaster.rs  mod.rs  pipeline.rs
crates/server/src/extractors/: auth.rs  git.rs  mod.rs
crates/server/src/middleware/: admin.rs
crates/server/src/models/: user.rs
crates/server/src/routing/: git.rs  mod.rs
crates/server/src/routing/api/: apps.rs  auth.rs  mod.rs  users.rs
crates/slasha-cli/: Cargo.toml  build.rs
crates/slasha-cli/src/: app_env.rs  apps.rs  auth.rs  clap_app.rs  deployments.rs  diagnostic.rs  git_ssh.rs  http.rs  main.rs  output.rs  scale.rs  service_env.rs  services.rs  state.rs  token.rs  users.rs
crates/slasha-db/: Cargo.toml  diesel.toml
crates/slasha-db/migrations/2026-05-14-171314-0000_create_app_domains_table/: down.sql
crates/slasha-db/migrations/2026-06-20-150000-0000_create_app_backups_table/: up.sql
crates/slasha-db/migrations/2026-06-21-010000-0000_add_backup_health/: down.sql
crates/slasha-db/migrations/2026-06-23-173447-0000_add_auto_deploy_to_apps/: down.sql
crates/slasha-db/migrations/2026-06-25-120000-0000_create_server_metrics_table/: down.sql  up.sql
crates/slasha-db/migrations/2026-06-26-164245-0000_create_server_settings_table/: up.sql
crates/slasha-db/migrations/2026-06-27-120000-0000_create_channels_table/: up.sql
crates/slasha-db/migrations/2026-06-27-120100-0000_create_alert_rules_table/: down.sql  up.sql
crates/slasha-db/migrations/2026-06-27-120200-0000_migrate_alert_settings/: down.sql  up.sql
crates/slasha-db/migrations/2026-06-28-120000-0000_create_alerts_tables/: down.sql
crates/slasha-db/migrations/2026-06-29-120000-0000_create_connections_table/: up.sql
crates/slasha-db/migrations/2026-06-30-120000-0000_create_cron_tables/: up.sql
crates/slasha-db/migrations/2026-06-30-130000-0000_add_cron_runtime/: up.sql
crates/slasha-db/migrations/2026-06-30-142156-0000_create_github_app_config/: down.sql
crates/slasha-db/migrations/2026-06-30-153915-0000_remove_status_from_apps/: down.sql
crates/slasha-db/migrations/duckdb/: 0001_create_app_metrics_table.sql  0002_create_server_metrics_table.sql  0003_add_node_id_to_server_metrics.sql
crates/slasha-db/migrations/sqlite/2026-04-08-101428-0000_create_ssh-keys_table/: down.sql
crates/slasha-db/migrations/sqlite/2026-05-08-190116-0000_unique_services_app_id_name/: down.sql
crates/slasha-db/migrations/sqlite/2026-05-13-114210-0000_create_app_scale_table/: up.sql
crates/slasha-db/migrations/sqlite/2026-05-14-171314-0000_create_app_domains_table/: up.sql
crates/slasha-db/migrations/sqlite/2026-06-05-164210-0000_create_app_metrics_table/: up.sql
crates/slasha-db/migrations/sqlite/2026-06-20-150000-0000_create_app_backups_table/: down.sql
crates/slasha-db/migrations/sqlite/2026-06-21-010000-0000_add_backup_health/: up.sql
crates/slasha-db/migrations/sqlite/2026-06-23-173447-0000_add_auto_deploy_to_apps/: up.sql
crates/slasha-db/migrations/sqlite/2026-06-28-120000-0000_create_alerts_tables/: up.sql
crates/slasha-db/migrations/sqlite/2026-06-29-120000-0000_create_connections_table/: down.sql
crates/slasha-db/src/: connection.rs  error.rs  lib.rs  migrations.rs
crates/slasha-db/src/models/: alert_rule.rs  alerts.rs  app.rs  app_backup.rs  app_metrics.rs  app_scale.rs  channel.rs  cron.rs  deployment.rs  git_connection.rs  github_app_config.rs  github_connection.rs  mod.rs  node.rs  node_metrics.rs  schema.rs  server_metrics.rs  server_settings.rs  service.rs  ssh_keys.rs  user.rs
crates/slasha-db/src/repos/: alert_rule.rs  alerts.rs  app.rs  app_backup.rs  app_domain.rs  app_metrics.rs  app_scale.rs  channel.rs  cron.rs  deployment.rs  git_connection.rs  github_app_config.rs  github_connection.rs  mod.rs  node.rs  node_metrics.rs  server_metrics.rs  server_settings.rs  service.rs  ssh_key.rs  user.rs
crates/slasha-server/: Cargo.toml
crates/slasha-server/src/: app_metrics.rs  assets.rs  domain_health.rs  error.rs  lib.rs  logs.rs  main.rs  metrics.rs  node_connection_manager.rs  server_metrics.rs  state.rs  utils.rs
crates/slasha-server/src/alerting/: actions.rs  mod.rs
crates/slasha-server/src/alerts/: delivery.rs  evaluation.rs  mod.rs  worker.rs
crates/slasha-server/src/connections/: mirror.rs  mod.rs
crates/slasha-server/src/connections/github/: auth.rs  client.rs  mod.rs  (+1 more)
crates/slasha-server/src/cron/: mod.rs  runner.rs  schedule.rs  scheduler.rs
crates/slasha-server/src/docker/: app_move.rs  error.rs  logs.rs  mod.rs  naming.rs  network.rs  registry.rs  rollback.rs  sync.rs
crates/slasha-server/src/extractors/: app.rs  auth.rs  git.rs  mod.rs  validated_json.rs
crates/slasha-server/src/metrics/: app.rs  domain.rs  mod.rs  node.rs  server.rs  service.rs  utils.rs
crates/slasha-server/src/middleware/: admin.rs  rate_limit.rs
crates/slasha-server/src/proxy/: caddy_client.rs  container.rs  error.rs  mod.rs  sync.rs
crates/slasha-server/src/routing/: api.rs  git.rs  mod.rs
crates/slasha-server/src/tunnel/: guard.rs
slasha-cli/: Cargo.toml
slasha-cli/src/: app_env.rs  apps.rs  auth.rs  clap_app.rs  config.rs  deployments.rs  domains.rs  git_ssh.rs  http.rs  main.rs  proxy.rs  service_env.rs  services.rs  ssh_keys.rs  state.rs  token.rs  users.rs
slasha-models/: Cargo.toml
slasha-models/migrations/2026-04-20-122403-0000_create_services_table/: up.sql
slasha-models/migrations/2026-04-21-121452-0000_create_app_env_table/: down.sql  up.sql
slasha-models/migrations/2026-04-22-164046-0000_create_service_env_table/: down.sql
slasha-models/src/: app.rs  deployment.rs  lib.rs  schema.rs  service.rs
(+429 files in other folders)
