[package]
name = "slasha-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "slasha-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie", "typed-header"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2", "chrono"] }
mime_guess = { version = "2.0.5", optional = true }
rust-embed = { version = "8.11.0", features = ["interpolate-folder-path"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full", "macros"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
argon2 = { version = "0.5.3", features = ["std", "zeroize"] }
chrono = { version = "0.4.44", features = ["serde"] }
zeroize = "1.8.2"
rand_core = "0.10.0"
dotenv = "0.15.0"
models = { path = "../models" }
base64 = "0.22.1"
dirs = "6.0.0"
diesel_migrations = "2.3.1"
flate2 = "1.1.9"
tokio-util = { version = "0.7.18", features = ["io"] }

[features]
bundle = ["rust-embed", "mime_guess"]
