[package]
name = "slasha-cli"
version = "0.0.0"
edition = "2024"


[[bin]]
name = "slasha"
path = "src/main.rs"

[features]
default = ["bundle", "vendored"]

# Build only the backend server. The frontend must be served separately
# (useful during frontend development).
serve = ["slasha-server"]

# Embed the frontend assets into the backend binary, producing a single
# self-contained executable.
bundle = ["serve", "slasha-server/bundle"]

# Statically link native dependencies instead of relying on host-installed
# libraries.
vendored = [
    "slasha-db/bundled-sqlite",
    "slasha-db/bundled-duckdb",
    "slasha-server?/vendored",
]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
comfy-table = { version = "7.1.4", features = ["tty", "custom_styling"] }
dirs = "6.0.0"
futures-util = "0.3.32"
indicatif = "0.18.4"
inquire = "0.9.4"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
eventsource-stream = "0.2.3"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
url = "2.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slasha-db = { path = "../slasha-db" }
slasha-server = { path = "../slasha-server", optional = true }
strum = { version = "0.28", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
keyring = { version = "4.1.2", features = ["v1"] }
toml = "1.1.2"
sysinfo = "0.38.4"
shell-escape = "0.1.5"
git-version = "0.3.9"

[build-dependencies]
clap = { version = "4.6.0", features = ["derive"] }
chrono = "0.4.44"
