[package]
name = "slasha-db"
version = "0.0.0"
edition = "2024"

[features]
# Statically link the embedded database libraries into the binary instead of
# relying on the host's installed versions. These features are intended for
# release builds so the published binary runs on any server regardless of the
# installed libraries.
bundled-sqlite = ["libsqlite3-sys/bundled"]
bundled-duckdb = ["duckdb/bundled"]

[dev-dependencies]
tempfile = "3.27.0"

[dependencies]
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2", "chrono"] }
diesel_migrations = "2.2.0"
tracing = "0.1"
duckdb = { version = "1.10504.0", features = ["r2d2", "chrono"] }
libsqlite3-sys = "0.36.0"
rust-embed = "8.5"
r2d2 = "0.8"
rand = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ts-rs = { version = "12.0.1", features = ["chrono-impl"] }
chrono = { version = "0.4.44", features = ["serde"] }
strum = "0.28"
strum_macros = "0.28"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt"] }
uuid = { version = "1.23.0", features = ["v4"] }
